Fixes in C++ codegen; updating release task